<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/andela" />

        <TextView
            android:id="@+id/textVieww"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:text="@string/mgbemena_anthony"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold|italic" />


        <!--<view-->
        <!--android:id="@+id/view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp" />-->

        <view
            class="android.view.SurfaceView"
            id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/track_android"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/country_nigeria"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/email_mgbemenaa_gmail_com"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number_07061148933"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/slack_username_tony_stark50"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="italic" />


        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/backButtonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:contextClickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hapticFeedbackEnabled="true"
        android:pointerIcon="zoom_in"
        android:tint="?attr/colorBackgroundFloating"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/toolbar2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="256dp"
        android:layout_toEndOf="@id/backButtonProfile"
        android:fontFamily="serif"
        android:text="@string/my_profile"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold|italic" />


</RelativeLayout>