<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/andela1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/about"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/curvebutton_trans"
            android:text="@string/about_ALC"
            android:textColor="@android:color/background_light"
            android:textSize="26sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/profile"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/curvebutton_trans"
            android:text="@string/my_Profile"
            android:textColor="@android:color/background_light"
            android:textSize="26sp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>